[package]
name = "tonemap"
description = "A collection of tonemapping algorithms"
version = "0.0.3"
authors = ["Viktor Zoutman <viktor.zoutman@embark-studios.com>"]
edition = "2018"
keywords = ["gamedev", "graphics", "rust-gpu"]
license = "MIT"
repository = "https://github.com/VZout/tonemap/tree/main"

[features]
default = ["glam_support"]
glam_support = ["glam"]

[dependencies]
glam = { version = "0.9.5", optional = true }
