[package]
name = "tonemap"
description = "A collection of tonemapping algorithms"
version = "0.0.4"
authors = ["Viktor Zoutman <viktor.zoutman@embark-studios.com>"]
edition = "2018"
keywords = ["gamedev", "graphics", "rust-gpu"]
license = "MIT"
repository = "https://github.com/VZout/tonemap/tree/main"

[features]
default = []
glam-support = ["glam"]
spirv-std-support = ["spirv-std"]

[dependencies]
glam = { version = "0.9.5", optional = true }
spirv-std = { version = "0.1.0", git = "https://github.com/EmbarkStudios/rust-gpu", branch = "main", optional = true }
